applications/websites/wesley.io/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wesley-io-deployment
  namespace: ns-wesley
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wesley-io
  template:
    metadata:
      labels:
        app: wesley-io
    spec:
      containers:
        - name: wesley-io-site
          image: ghcr.io/wesleyklop/wesley.io/site:latest 
          ports:
            - containerPort: 80
