applications/websites/wesley.io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wesley-io-svc
spec:
  selector:
    app: wesley-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
