applications/websites/wesley.io/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wesley-io-svc
  namespace: ns-wesley
spec:
  selector:
    app: wesley-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
