applications/websites/wesley.io/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wesley-io-ingress-route
spec:
  rules:
    - host: wesley.io
      http: &rules
        paths:
          - backend:
              service:
                name: wesley-io-svc
                port:
                  number: 80
    - host: wesl.io
      http: *rules
    - host: wesleyklop.nl
      http: *rules
